css/streaming-player-ui.css
* {
    box-sizing: border-box;
}

body {
    background: mediumpurple;
    color: white;
    margin: 0;
    font-family: 'Roboto', sans-serif;
    background-image: linear-gradient(135deg, mediumpurple, lightblue);
}

.wrapper {
    /* TODO: make the wrapper a grid container */
    display: grid;
    /* TODO: define five columns where the middle three columns are 400px and the outer columns fill the remaining space */
    grid-template-columns: auto 400px 400px 400px auto;
    /* TODO: add a gap of 1em around all grid items */
    grid-gap: 1em;
    /* no row properties are needed */
    /* TODO: the height of the wrapper should be 100 viewport height units */
    height: 100vh;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

header {
    background: purple;
    /* TODO: define the grid area of header such that it takes up the first row and middle three columns */
    grid-area: 1 / 2 / 2 / 6;
}

nav {
    /* TODO: define the grid area of nav such that it takes up the second column of the second row  */
    grid-area: 2 / 2 / 3 / 3;
}

main {
    /* TODO: define the grid area of main such that it takes up the columns 3 and 4 of the second row  */
    grid-area: 2 / 3 / 3 / 5;
    /* TODO: make main a grid container as well */
    display: grid;
    /* TODO: define main to contain three columns that together take up equally the full width of main and have a 1em gap between grid items */
    overflow: auto;
    grid-template-columns: auto auto auto;
    grid-gap: 1em;
}

header ul {
    /* TODO: use flex box to horizontally line up all list items */
    display: flex;

}

header a {
    font-weight: lighter;
}

header ul li:nth-of-type(2) {
    /* TODO: uncomment the next line and add a value which causes Flexbox to automatically fill in extra space on it's left side */
    margin-left: auto;
    border-right: 1px solid white;
}

header a:hover {
    background: white;
    color: purple;
}

.header-background {
    background: purple;
    /* TODO: define the grid area of this element to take up the entire first row of the .container grid  */
    grid-area: 1 / 1 / 2 / 6;
}

nav ul {
    display: flex;
    width: 100%;
}

a {
    display: inline-block;
    color: white;
    text-decoration: none;
    font-size: 1.5em;
    padding: 1em;
}

nav ul {
    flex-direction: column;
}


nav a {
    width: 100%;
    font-weight: bold;
    border-radius: .2em;
    transition: background-color .1s;
}

nav a:hover {
    background: white;
    color: mediumpurple;
}

.logo {
    font-weight: bold;
}

.card {
    background: black;
    border: 3px solid lightgrey;
    width: 100%;
    height: 200px;
    border-radius: 10px;
    position: relative;
    /* TODO: add a property that causes a transition of the border from lightgrey to near black in .2 seconds */
    transition: background .2s ease;
}

.card:hover {
    border-color: #111;
}

.card a {
    padding: 0;
    height: 100%;
    width: 100%;
    display: flex;
}

.card i {
    font-size: 4em;
    margin: auto;
}

